firebase auth added

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,3 +19,12 @@
 ion-app.md [padding], ion-app.md [padding] .scroll-content {
 	padding: 0;
 }
+.label-md{
+ margin-top:20px;
+ margin-bottom:20px;
+
+}
+.md .menu-inner{
+  background-color: #eaa449;
+}
+
