--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,34 @@
 page-profile {
+  .main {
+    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox; /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+    display: flex; /* NEW, Spec - Firefox, Chrome, Opera */
+    justify-content: center;
+    align-items: center;
 
+    background-color: #fff;
+  }
+  .img {
+    padding: 40px 0;
+  }
+  .text {
+    padding-left: 25px;
+  }
+  .profile-element {
+    padding-left: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top-width: 1px;
+    border-top: 1px solid #ccc;
+  }
+  .ion-icon{
+    font-size: 22px;
+  }
+  .profile-img {
+    height: 150px;
+    width: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+  }
 }
