--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,18 @@
+<ion-menu [content]="content">
+
+  <ion-toolbar>
+    <ion-title> </ion-title>
+  </ion-toolbar>
+
+  <ion-content>
+    <ion-list>
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+    </ion-list>
+  </ion-content>
+
+</ion-menu>
+
+<ion-nav id="nav" [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
 <ion-nav [root]="rootPage"></ion-nav>
