--- a/src/components/view-product/view-product.scss
+++ b/src/components/view-product/view-product.scss
@@ -1,3 +1,20 @@
 view-product {
+  .size-btn{
+    border-radius: 50px;
+    border: 1px solid #CCCCCC;
+    font-size: 18px;
+    padding-top: 5px;
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-bottom: 5px;
+    margin:13px;
+  }
+  .color-btn {
+    display:inline-block;width:35px;height:35px;border-radius:50px;font-size:20px;color:#fff;line-height:100px;text-align:center;text-decoration:none;
+    margin: 15px;
+  }
+  .menu:hover{
+    color:#ccc;text-decoration:none;background:#333
 
+  }
 }
